# OpticalFlowParallelisation

./: CMakeLists.txt  README.md
Python src/: absDiffCalculator.py  resultPlotter.py
docs/: Thesis.docx
measurements/: Time_Og.txt  Time_PP.txt  Time_PPstl.txt  dst_FarnebackPP.txt  dst_FarnebackPPstl2.txt  example_01.txt  example_cpu.txt  example_gpu.txt  example_gpu_op.txt
src/: CMakeLists.txt  denseFlow.cpp  optflowgf.cpp  polyExp-STL.cpp  simpleTest.cpp  testPlotter.py
